bottom overflow style fix

--- a/css/simplifience.css
+++ b/css/simplifience.css
@@ -2615,7 +2615,7 @@ div.cap footer a.author {
   clear: right;
 }
 div.cap footer h1.logo {
-  font-size: 40px;
+  font-size: 32px;
   margin-bottom: 0;
 }
 div.cap footer a.author {
